# zk

./: .dockerignore  .env.example  .gitattributes  .gitignore  DEPLOY_GCP.md  Dockerfile  Groth16Verifier.sol  IPicoVerifier.sol  LOCAL_TESTING.md  PicoVerifier.sol  README.md  deploy.sh  package.json  tsconfig.json  verify-proof.ts
Doc/: ack-deadline-fix.md  pubsub-implementation-report.md  testing-guide.md
app/: Cargo.toml
app/elf/: riscv32im-pico-zkvm-elf
app/src/: main.rs
contracts/: README.md  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: Groth16Verifier.sol
lib/: Cargo.toml
lib/src/: lib.rs
prover/: Cargo.toml  README.md
prover/data/: groth16_witness.json  vm_vk
prover/src/: config.rs  error.rs  main.rs  prover.rs  service.rs  types.rs
script/: Deploy.s.sol
scripts/: README.md  gcp-pubsub.ts  requirements.txt  run-test.sh  setup-test-env.sh  start-emulator.sh  stop-emulator.sh  test-pubsub.js  test-pubsub.py  test-pubsub.ts  verify-proof.ts
